tests/fixtures/invalid/str_lshift_none.py
# Cannot left shift Str and None
x: str = "hello" << None
